backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lahnly-ingress
  namespace: lahnly
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  rules:
    - host: api.lahnly.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lahnly-api-service
                port:
                  number: 80
